@@ -1,3 +1,3 @@
 module RailsWizard
-  VERSION = "3.1.9"
+  VERSION = "3.1.10"
 end
